[gd_scene load_steps=11 format=3 uid="uid://j5v4u7vbkona"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ssx4f"]
[ext_resource type="Texture2D" uid="uid://b2pxcw7vq1xo5" path="res://Assets/Sprites/Player/MediumHull_0.png" id="2_f8teq"]
[ext_resource type="Texture2D" uid="uid://cu47aiv1mim5j" path="res://Assets/Sprites/Player/MediumHull_1.png" id="3_1e4r2"]
[ext_resource type="Texture2D" uid="uid://j06dskuw3i34" path="res://Assets/Sprites/Player/MediumHull_2.png" id="4_ja3sk"]
[ext_resource type="Texture2D" uid="uid://bb3slyx24obve" path="res://Assets/Sprites/Player/MediumHull_3.png" id="5_7p67g"]
[ext_resource type="Texture2D" uid="uid://dwe023dd2bv3j" path="res://Assets/Sprites/Player/MediumHull_4.png" id="6_4hn2y"]
[ext_resource type="Texture2D" uid="uid://u4p6b127vo4f" path="res://Assets/Sprites/Player/MediumCannon.png" id="7_htws1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7vlw"]
size = Vector2(24, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_xjh1x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f8teq")
}, {
"duration": 1.0,
"texture": ExtResource("3_1e4r2")
}, {
"duration": 1.0,
"texture": ExtResource("4_ja3sk")
}, {
"duration": 1.0,
"texture": ExtResource("3_1e4r2")
}, {
"duration": 1.0,
"texture": ExtResource("5_7p67g")
}, {
"duration": 1.0,
"texture": ExtResource("6_4hn2y")
}, {
"duration": 1.0,
"texture": ExtResource("5_7p67g")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_p87l3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath("Collision:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("HullSprite:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("CannonSprite:rotation")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath("HullSprite:frame")
properties/4/spawn = true
properties/4/sync = true

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_ssx4f")

[node name="Name" type="Label" parent="."]
texture_filter = 1
offset_left = -24.0
offset_top = -51.0
offset_right = 23.0
offset_bottom = -25.0
theme_override_font_sizes/font_size = 16
text = "
"
horizontal_alignment = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j7vlw")

[node name="HullSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xjh1x")
animation = &"move"

[node name="CannonSprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("7_htws1")

[node name="CannonPosition" type="Marker2D" parent="CannonSprite"]
position = Vector2(0, -25)

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_p87l3")
